--- a/02 - JS and CSS Clock/style.css
+++ b/02 - JS and CSS Clock/style.css
@@ -47,3 +47,8 @@ html {
     transition: all 0.1s;
     transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
   }
+
+  .second-hand {
+    height: 2px;
+    background-color: #eeaf1e;
+  }
